syntax = "proto3";
package student;
option go_package = "./student;student";

message Student {
    string name = 1;
    int32 age = 2;
}

message Class {
    string className = 1;
}

service FindClass {
    rpc MyClass(Student) returns (Class){}
}